# rust-bdd-ci

./: .gitmodules  Cargo.toml  plot.gp
.github/workflows/: ci.yml  pr_bench.yml
1/merge/bdd from expr/bl/: estimates.json  raw.csv  sample.json  tukey.json
1/merge/bdd from expr/change/: estimates.json
1/merge/bdd from expr/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
1/merge/bdd from expr/report/: index.html
2/merge/bdd from expr/report/: index.html
2/merge/report/: index.html
2/merge/xor/10/report/: index.html
2/merge/xor/100/report/: index.html
2/merge/xor/125/report/: index.html
2/merge/xor/150/report/: index.html
2/merge/xor/3/report/: index.html
2/merge/xor/5/report/: index.html
2/merge/xor/50/report/: index.html
2/merge/xor/75/report/: index.html
2/merge/xor/Direct/10/report/: index.html
2/merge/xor/Direct/100/report/: index.html
2/merge/xor/Direct/125/report/: index.html
2/merge/xor/Direct/150/report/: index.html
2/merge/xor/Direct/3/report/: index.html
2/merge/xor/Direct/5/report/: index.html
2/merge/xor/Direct/50/report/: index.html
2/merge/xor/Direct/75/report/: index.html
2/merge/xor/Direct/report/: index.html
2/merge/xor/ITE/10/report/: index.html
2/merge/xor/ITE/100/report/: index.html
2/merge/xor/ITE/125/report/: index.html
2/merge/xor/ITE/150/report/: index.html
2/merge/xor/ITE/3/report/: index.html
2/merge/xor/ITE/report/: index.html
2/merge/xor/report/: index.html
benches/: build_bdd.rs  my_benchmark.rs
src/: lib.rs  main.rs
tests/: bdd_correctness.rs
(+3 files in other folders)
