[package]
name = "rust-bdd-ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boolean_expression = { path = "boolean_expression", version = "0.4.4" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "build_bdd"
harness = false

[lib]
bench = false

[[bin]]
name = "bdd_test"
path = "src/main.rs"
bench = false
